--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,11 @@ jobs:
             rid: osx-arm64
             lib_name: librgblibcffi.dylib
             target: aarch64-apple-darwin
+          # Windows x64
+          - runner: windows-latest
+            rid: win-x64
+            lib_name: rgblibcffi.dll
+            target: x86_64-pc-windows-msvc
 
     steps:
       - name: Checkout repository
@@ -209,6 +214,7 @@ jobs:
             ### Supported Platforms
             - Linux x64 (`linux-x64`)
             - macOS ARM64 (`osx-arm64`)
+            - Windows x64 (`win-x64`)
             
             ### Installation
             ```bash
